[package]
name = "acrobate"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12"
poise = "0.6.1"
reqwest = { version = "0.12.2", features = ["json"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0.167"
serde_json = "1.0.85"
serde_derive = "1.0.144"
dotenv = "0.15.0"
